--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "bugs": {
     "url": "https://github.com/pritamworld/f2025_comp3104/issues"
   },
-  "homepage": "https://github.com/pritamworld/f2025_comp3104#readme",
+  "homepage": "https://pritamworld.github.com/f2025_comp3104",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
